--- a/package.json
+++ b/package.json
@@ -5,13 +5,16 @@
   "main": "server.js",
   "scripts": {
     "start": "NODE_ENV=production node server",
-    "dev":"nodemon server"
+    "dev": "nodemon server"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.10.0",
     "nodemon": "^2.0.4"
   }
 }
